# outhouse

./: .gitignore  OutHouse.sln  README.md
.github/workflows/: backend-ci.yml  backend.yml
OutHouse.Server/: Dockerfile  OutHouse.Server.csproj  OutHouse.Server.http  Program.cs  WeatherForecast.cs  appsettings.Development.json
OutHouse.Server.Tests/: OutHouse.Server.Tests.csproj  UnitTest1.cs
OutHouse.Server.Tests/Domain/: OuthouseBookingsTests.cs  OuthouseMembersTests.cs  OuthouseTests.cs
OutHouse.Server.Tests/Models/: OuthouseTests.cs
OutHouse.Server.Tests/Service/: MeServiceTests.cs  OuthouseBookingServiceTests.cs  OuthouseMemberServiceTests.cs  OuthouseServiceTests.cs  ServiceTestsBase.cs
OutHouse.Server/Application/: BaseService.cs
OutHouse.Server/Base/: MyControllerBase.cs
OutHouse.Server/Controllers/: Mapper.cs  MeController.cs  OuthousesController.cs  WeatherForecastController.cs
OutHouse.Server/DataAccess/: ApplicationDbContext.cs  OuthouseRepository.cs
OutHouse.Server/Domain/: Member.cs  Outhouse.cs  User.cs
OutHouse.Server/Identity/: ClaimsPrincipalExtensions.cs  UserContext.cs
OutHouse.Server/Infrastructure/: ApplicationDbContext.cs  SeedData.cs
OutHouse.Server/Migrations/: 20240228170354_MyFirsMigration.Designer.cs  20240228170354_MyFirsMigration.cs  20240311193153_RedoEverything.Designer.cs  20240311193153_RedoEverything.cs  20240315155728_ModifyMemberships.Designer.cs  20240315155728_ModifyMemberships.cs  20240317200108_AddSeedData.Designer.cs  20240317200108_AddSeedData.cs  20240318110854_AddOrphanOuthouse.Designer.cs  20240318110854_AddOrphanOuthouse.cs  20240325154256_AddBookings.Designer.cs  20240325154256_AddBookings.cs  ApplicationDbContextModelSnapshot.cs  UserContextModelSnapshot.cs
OutHouse.Server/Models/: Member.cs  Outhouse.cs  Result.cs  User.cs  WeatherForecast.cs
OutHouse.Server/Properties/: launchSettings.json  serviceDependencies.OutHouse.json  serviceDependencies.json  serviceDependencies.local.json
OutHouse.Server/Service/: BaseService.cs  IDbContext.cs  IUserContext.cs  ServiceBase.cs
OutHouse.Server/Users/: User.cs  UserContext.cs  UserController.cs
OutHouse.Server/Weather/: WeatherForecast.cs  WeatherForecastController.cs
api/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/versions/: 9865cdf8de34_add_outhouses_table.py  db36e8d2ddf6_create_user_and_bookings_tables.py
api/data/: db.sqlite
api/outhouse/: config.py  db.py  main.py  schemas.py
api/outhouse/api/routers/: booking.py  calendar.py  outhouse.py  root.py  user.py
api/outhouse/db/: db.py  models.py  services.py
api/outhouse/routers/: calendar.py  dependencies.py  outhouse.py  root.py  schemas.py  user.py
api/scripts/: build-and-publish.sh  build.sh  check-commit.sh  publish.sh  sql_playground.py  test.sh
back-end/: .gitignore
back-end/outhouse/: db.py  (+1 more)
backend/: .dockerignore  .gitignore  Dockerfile  README.md  Untitled Diagram.drawio  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9865cdf8de34_add_outhouses_table.py  db36e8d2ddf6_create_user_and_bookings_tables.py
backend/app/: adapters.py  api_router.py  app.py  config.py  db_adapters.py  db_drivers.py  drivers.py  entities.py  factories.py  interactors.py  main.py  managers.py  routers.py
backend/docs/: OurCottageApi.drawio
backend/outhouse/api/: dependencies.py  schemas.py
backend/outhouse/api/routers/: outhouse.py
backend/outhouse/db/: db.py  services.py
backend/scripts/: build-and-publish.sh  build.sh  check-commit.sh  clean.sh  format.sh  reset_test_db.sh  serve.sh  test.sh
backend/sql/: create_test_db.sql  create_test_db.sqlite
backend/tests/: conftest.py  test_adapters.py  test_app.py  test_db_adapters.py  test_interactors.py  test_managers.py
deploy/: api.yml  ingress.yml  mariadb.yml
frontend/: package-lock.json  package.json
ops/: api.yml  ingress.yml  kubernetes-manifest.yml  mariadb.yml  mysql.yml
outhouse.client/: package-lock.json  package.json  vite.config.js
(+53 files in other folders)
