[tool.poetry]
name = "our-cottage"
version = "0.1.0"
description = ""
authors = ["Jan Hein de Jong <janhein.dejong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
email-validator = "^2.0.0.post2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
ruff = "^0.0.270"
pytest = "^7.3.1"
httpx = "^0.24.1"

[tool.mypy]
exclude = "tests"

[tool.ruff]
extend-exclude = ["alembic"]
select = ["E", "F", "B", "I"]
extend-ignore = ["B008"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
